--- a/src/components/dashboardBottom.css
+++ b/src/components/dashboardBottom.css
@@ -13,7 +13,7 @@
     width: 110px;
     text-align: center;
     font-size: 19px;
-    color: grey;
+    color: #707070;
     font-weight: 400;
     margin: auto;
     margin-top: 20px;
@@ -58,7 +58,7 @@
   width: 110px;
   text-align: right;
   font-size: 19px;
-  color: grey;
+  color: #707070;
   font-weight: 400;
   margin: 0px;
   margin-top: 20px;
@@ -98,7 +98,7 @@
   .bottom-right > h2 {
     font-size: 20px;
     font-weight: 600;
-    color: grey;
+    color: #707070;
     margin-top: 5px;
     font-weight: 400;
   }
@@ -115,7 +115,7 @@
     width: 110px;
     text-align: right;
     font-size: 19px;
-    color: grey;
+    color: #707070;
     font-weight: 400;
     margin: 0px;
     margin-top: 20px;
@@ -147,7 +147,7 @@
   .geo > p {
     font-size: 15px;
     font-weight: 600;
-    color: grey;
+    color: #707070;
     margin-top: 5px;
     font-weight: 400;
   }
